# ChangeLog for www-apps/jekyll
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/jekyll/ChangeLog,v 1.4 2014/08/16 13:09:59 mrueg Exp $

  16 Aug 2014; Manuel Rüger <mrueg@gentoo.org> jekyll-2.3.0.ebuild:
  Add missing test dependency.

*jekyll-2.3.0 (15 Aug 2014)

  15 Aug 2014; Manuel Rüger <mrueg@gentoo.org> +jekyll-2.3.0.ebuild,
  jekyll-1.5.1.ebuild:
  Version bump.

  14 Jun 2014; Manuel Rüger <mrueg@gentoo.org> jekyll-1.5.1.ebuild:
  Restrict commander dependency to <4.2

*jekyll-1.5.1 (18 Apr 2014)

  18 Apr 2014; Manuel Rüger <mrueg@gentoo.org> +jekyll-1.5.1.ebuild,
  +metadata.xml:
  Initial version.