@@ -1,6 +1,4 @@
-DIST jekyll-1.5.1.gem 266240 SHA256 8095033be5fdd620a6bf8bd0d21c34b4d607116432e6fc3a2eccb09bfe72eea2 SHA512 e46b6a04b84c0f0fa48d02e75cc455a9bd95ff36290561c65d311b7c2980e30b6cae4c53f56b2e5a8f9d10ddd411de677b2e5ea60b311f35abf3fc0445470986 WHIRLPOOL 44f661936f2649d5faffdf72d282256977ddf6644d7bd563ccc2a3b6443e5f9a454245ca470c4f0398aeddd29758b06fd36b33318c36d2949d699da1d035211f
 DIST jekyll-2.3.0.tar.gz 851884 SHA256 bf01a021d2c3535a84c2edabaedf5cceae66c1b0c0bfe1545f6e8e1fd14d5f7c SHA512 7ffaecf464f9e9e744990baf5fc4ce3eba975ef072bc7a1ca975e2b4740c9402a48c46454f630ecda31eeaac45c113170e856a8265c2c1fb06ddde85444fc5eb WHIRLPOOL 6624eb4e4a05b1d526a8e0cf2dfe7d3c81c87448f98b3ef354d8e837e769513383bf41d5f4ba4000e7b0a281e0a98cc8cc9bb8faea969a00905e242cd06f3eac
-EBUILD jekyll-1.5.1.ebuild 1118 SHA256 8787aeb0dc579e10d1b9a73c9265ebddb975d413d0a0c8d5e3d50cc05c97d807 SHA512 34e2d303a2ab9cf00801de9ef031e019966b59f912109072d2c3dc006b2be9eda7a5720b26f19b385d4f3c241621fb998a9b2c56567862104b756e3184bba50f WHIRLPOOL a7232956e4c5dcd5107954348a65f2547020f2147002a03cb8246f2913c5b2b7a023c329398bdcea8c562768fbaee66a701229f7bb48cd69f441f534905378c9
 EBUILD jekyll-2.3.0.ebuild 1397 SHA256 415eddcfa33a3dc67fdec90212df09154f365a165f99e3018876477524a4e124 SHA512 da0d530927ade706ea34a7fe28a53879bf1198b9ea57463d3e9cf713df070f775b2b987698aad2b8bb396fc054c574af7f2fffa515b770e388046b6ac091d4f3 WHIRLPOOL bc1da06b0986b75d6b1d141c0684c29c1d4c9e8f95b0a2ea5495f90ad0435be8d09ac4e2ca80baef6496394e7c07bdfbc4a08a7265fb07cdc7c95dc63c570099
-MISC ChangeLog 687 SHA256 cc38a8410823b9d1bf7d999007fed8a090dc28c096ba977160ed3e8fef4112e8 SHA512 c1262c010c12e8115d2f76fb5b93d091bb5a4929ca30b3f2f097415da0655deaf468ba207da2ff3d18cfbf41323e4a1f7fb5f86607275d54ac3f52b3c66cae38 WHIRLPOOL 0fc9d1ce880b66f586a48cac7a85cf9f584ee810fe0df35be43ca026e18571c36dca4cac818e3e2698a367cc567b91e6c756fa4c1bf63161ce23bd55383df757
+MISC ChangeLog 773 SHA256 87720cad4defbd158107930066f3030268c3e77af50b0e581496c26bb37cc930 SHA512 59c5843b50bd906b30f2938cdd81e6d0df72a4e324b0ff9af9d3277896899798b6ef053eff392fd95bad02a132395cf7ca04cb3852128c20ff5d07c409b989e9 WHIRLPOOL 1b7e30384fc5611c47ee3294f9d6ed14e14420c885edb9502e34e3780a09b08eab4d9023bdf78937ff5a1165dbd06a1c80498887901abf1d60d043f8f48c53a3
 MISC metadata.xml 231 SHA256 9c04e1ed256c8293b1120d9b56de16e3ee5ff6cdb3967d517d46c5974c23d67a SHA512 0aaf70d152f2b3a4b333fccde6f5c9fbb6cac1a9ecf3e2b2ddb57a1c260b3f0e7bdd215edad17f959b2a3324929bf446164341531783431c3435d1b956d09d83 WHIRLPOOL d631165d8a2dd82731e34fed2e3c09437b8c0d383da28c3e0a5f704196afc1810a7efee388e6b558493e82fa61cc799ab3b93eb1b7b17464dd380efdcba60d06
